Bug 102031 - xf86drm.c should use readdir() instead of readdir_r()
Summary: xf86drm.c should use readdir() instead of readdir_r()
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: libdrm (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-03 18:35 UTC by Thomas Anderson
Modified: 2018-03-22 16:52 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Thomas Anderson 2017-08-03 18:35:24 UTC
readdir_r() has been deprecated in glibc-2.24, so trying to compile libdrm against those headers will give a deprecation warning.
Comment 1 Emil Velikov 2018-03-22 16:52:35 UTC
Should be fixed with

commit bb45ce4e3ac751315bfd7fbfd9e1425bf515ec0d
Author: John Stultz <john.stultz@linaro.org>
Date:   Tue Mar 20 17:48:23 2018 +0000

    libdrm: Use readdir instead of readdir_r to avoid build warnings


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.